--- a/DegustandoAndo/core/templates/core/index.html
+++ b/DegustandoAndo/core/templates/core/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+{%load static%}
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,10 +10,10 @@
   <title>Meetup: Free Responsive One Page Bootstrap Template</title>
 
   <!-- Bootstrap -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
-  <link href="css/themify-icons.css" rel="stylesheet">
-  <link href='css/dosis-font.css' rel='stylesheet' type='text/css'>
+  <link href= "{% static 'core/css/bootstrap.min.css' %}" rel="stylesheet">
+  <link href= "{% static 'core/css/style.css' %}" rel="stylesheet">
+  <link href= "{% static 'core/css/themify-icons.css' %}" rel="stylesheet">
+  <link href= "{% static 'core/css/dosis-font.css' %}" rel='stylesheet' type='text/css'>
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -57,7 +57,7 @@
         <!-- Start: Header -->
         <div class="row hero-header" id="home">
           <div class="col-md-7">
-            <img src="img/meetup-logo.png" class="logo">
+            <img src="{% static 'core/img/meetup-logo.png' %}" class="logo">
             <h1>Attend the most awaited Conference of 2015</h1>
             <h3>to start you up with your business!</h3>
             <h4>20<sup>th</sup> to 22<sup>nd</sup>  October, 2015</h4>
@@ -65,7 +65,7 @@
 
           </div>
           <div class="col-md-5 hidden-xs">
-            <img src="img/rocket.png" class="rocket animated bounce">
+            <img src="{% static 'core/img/rocket.png' %}" class="rocket animated bounce">
           </div>
         </div>
         <!-- End: Header -->
@@ -96,7 +96,7 @@
         <div class="row me-row content-ct speaker" id="speakers">
           <h2 class="row-title">Meet the Speakers</h2>
           <div class="col-md-4 col-sm-6 feature">
-            <img src="img/speaker-1.png" class="speaker-img">
+            <img src="{% static 'core/img/speaker-1.png' %}" class="speaker-img">
             <h3>Simon Collins</h3>
             <p>Simon is designer and partner at Fictivekin and has worked in a variety of situations for bands, record labels, governments, polar explorers, and most other things...</p>
             <ul class="speaker-social">
@@ -106,7 +106,7 @@
             </ul>
           </div>
           <div class="col-md-4 col-sm-6 feature">
-            <img src="img/speaker-2.png" class="speaker-img">
+            <img src="{% static 'core/img/speaker-2.png' %}" class="speaker-img">
             <h3>Stephanie Troeth</h3>
             <p>Stephie is a user experience researcher and designer. In over 15 years of working on the web, she has worn many hats, including a product lead for a tech startup in publishing...</p>
             <ul class="speaker-social">
@@ -116,7 +116,7 @@
             </ul>
           </div>
           <div class="col-md-4 col-sm-6 feature">
-            <img src="img/speaker-3.png" class="speaker-img">
+            <img src="{% static 'core/img/speaker-3.png' %}" class="speaker-img">
             <h3>Harry Roberts</h3>
             <p>Harry is a freelance designer, developer, writer, speaker and front-end architect from the UK, previously working as Senior UI Developer for Sky. He Tweets at...</p>
             <ul class="speaker-social">
@@ -126,7 +126,7 @@
             </ul>
           </div>
           <div class="col-md-4 col-sm-6 feature">
-            <img src="img/speaker-4.png" class="speaker-img">
+            <img src="{% static 'core/img/speaker-4.png' %}" class="speaker-img">
             <h3>Geri Coady</h3>
             <p>Harry is a freelance designer, developer, writer, speaker and front-end architect from the UK, previously working as Senior UI Developer for Sky. He Tweets at...</p>
             <ul class="speaker-social">
@@ -136,7 +136,7 @@
             </ul>
           </div>
           <div class="col-md-4 col-sm-6 feature">
-            <img src="img/speaker-5.png" class="speaker-img">
+            <img src="{% static 'core/img/speaker-5.png' %}" class="speaker-img">
             <h3>Andy Budd</h3>
             <p>Harry is a freelance designer, developer, writer, speaker and front-end architect from the UK, previously working as Senior UI Developer for Sky. He Tweets at...</p>
             <ul class="speaker-social">
@@ -146,7 +146,7 @@
             </ul>
           </div>
           <div class="col-md-4 col-sm-6 feature">
-            <img src="img/speaker-6.png" class="speaker-img">
+            <img src="{% static 'core/img/speaker-6.png' %}" class="speaker-img">
             <h3>Christian Lauke</h3>
             <p>Harry is a freelance designer, developer, writer, speaker and front-end architect from the UK, previously working as Senior UI Developer for Sky. He Tweets at...</p>
             <ul class="speaker-social">
@@ -199,7 +199,7 @@
                     <div class="media">
                       <div class="media-left">
                         <a href="#">
-                          <img class="media-object" src="img/speaker-1.png" alt="...">
+                          <img class="media-object" src="{% static 'core/img/speaker-1.png' %}" alt="...">
                         </a>
                       </div>
                       <div class="media-body">
@@ -213,7 +213,7 @@
                     <div class="media">
                       <div class="media-left">
                         <a href="#">
-                          <img class="media-object" src="img/speaker-2.png" alt="...">
+                          <img class="media-object" src="{% static 'core/img/speaker-2.png' %}" alt="...">
                         </a>
                       </div>
                       <div class="media-body">
@@ -227,7 +227,7 @@
                     <div class="media">
                       <div class="media-left">
                         <a href="#">
-                          <img class="media-object" src="img/speaker-3.png" alt="...">
+                          <img class="media-object" src="{% static 'core/img/speaker-3.png' %}" alt="...">
                         </a>
                       </div>
                       <div class="media-body">
@@ -241,7 +241,7 @@
                     <div class="media">
                       <div class="media-left">
                         <a href="#">
-                          <img class="media-object" src="img/speaker-4.png" alt="...">
+                          <img class="media-object" src="{% static 'core/img/speaker-4.png' %}" alt="...">
                         </a>
                       </div>
                       <div class="media-body">
@@ -259,7 +259,7 @@
                     <div class="media">
                       <div class="media-left">
                         <a href="#">
-                          <img class="media-object" src="img/speaker-4.png" alt="...">
+                          <img class="media-object" src="{% static 'core/img/speaker-4.png' %}" alt="...">
                         </a>
                       </div>
                       <div class="media-body">
@@ -273,7 +273,7 @@
                     <div class="media">
                       <div class="media-left">
                         <a href="#">
-                          <img class="media-object" src="img/speaker-3.png" alt="...">
+                          <img class="media-object" src="{% static 'core/img/speaker-3.png' %}" alt="...">
                         </a>
                       </div>
                       <div class="media-body">
@@ -287,7 +287,7 @@
                     <div class="media">
                       <div class="media-left">
                         <a href="#">
-                          <img class="media-object" src="img/speaker-2.png" alt="...">
+                          <img class="media-object" src="{% static 'core/img/speaker-2.png' %}" alt="...">
                         </a>
                       </div>
                       <div class="media-body">
@@ -301,7 +301,7 @@
                     <div class="media">
                       <div class="media-left">
                         <a href="#">
-                          <img class="media-object" src="img/speaker-1.png" alt="...">
+                          <img class="media-object" src="{% static 'core/img/speaker-1.png' %}" alt="...">
                         </a>
                       </div>
                       <div class="media-body">
@@ -319,7 +319,7 @@
                     <div class="media">
                       <div class="media-left">
                         <a href="#">
-                          <img class="media-object" src="img/speaker-6.png" alt="...">
+                          <img class="media-object" src="{% static 'core/img/speaker-6.png' %}" alt="...">
                         </a>
                       </div>
                       <div class="media-body">
@@ -333,7 +333,7 @@
                     <div class="media">
                       <div class="media-left">
                         <a href="#">
-                          <img class="media-object" src="img/speaker-5.png" alt="...">
+                          <img class="media-object" src="{% static 'core/img/speaker-5.png' %}" alt="...">
                         </a>
                       </div>
                       <div class="media-body">
@@ -347,7 +347,7 @@
                     <div class="media">
                       <div class="media-left">
                         <a href="#">
-                          <img class="media-object" src="img/speaker-3.png" alt="...">
+                          <img class="media-object" src="{% static 'core/img/speaker-3.png' %}" alt="...">
                         </a>
                       </div>
                       <div class="media-body">
@@ -361,7 +361,7 @@
                     <div class="media">
                       <div class="media-left">
                         <a href="#">
-                          <img class="media-object" src="img/speaker-4.png" alt="...">
+                          <img class="media-object" src="{% static 'core/img/speaker-4.png' %}" alt="...">
                         </a>
                       </div>
                       <div class="media-body">
