--- a/DegustandoAndo/core/templates/core/agregar_articulo.html
+++ b/DegustandoAndo/core/templates/core/agregar_articulo.html
@@ -1,4 +1,10 @@
 {%extends 'core/base.html'%}
 {%block contenido_central%}
-AGREGAR MI ARTICULO
+<form action ="" method="POST">
+    {% csrf_token %}
+<table>
+    {{form.as_table}}
+<table/>
+<input type="submit" value= "Agregar mi reseña">
+</form>
 {% endblock  %}
