--- a/DegustandoAndo/core/templates/core/editar_articulo.html
+++ b/DegustandoAndo/core/templates/core/editar_articulo.html
@@ -1,4 +1,14 @@
 {%extends 'core/base.html'%}
 {%block contenido_central%}
-ESTE ES EL HTML INDEX
+
+<form action ="" method="POST">
+    {% csrf_token %}
+<table>
+
+    {{form.as_table}}
+
+</table>
+<input type="submit" value= "Editar">
+
+</form>
 {% endblock  %}
