--- a/DegustandoAndo/core/templates/core/mostrar_articulo.html
+++ b/DegustandoAndo/core/templates/core/mostrar_articulo.html
@@ -1,4 +1,24 @@
 {%extends 'core/base.html'%}
 {%block contenido_central%}
-AQUI SE MUESTRA LISTA DE ARTICULOS
+
+<table>
+    <th> -id-</th>
+    <th> titulo- </th>
+    <th> subtitulo- </th>
+    <th> ubicacion- </th>
+
+    {% for articulo in articulos %}
+        <tr>
+            <td>  {{ articulo.id}} </td>
+            <td>  {{ articulo.titulo }} </td>
+            <td>  {{ articulo.subtitulo }} </td>
+            <td>  {{ articulo.ubicacion }} </td>
+            <td><a href = "{% url 'editar' articulo.id %}" > Editar</a></td>
+            <td><a href = "{% url 'eliminar' articulo.id %}" > Eliminar</a></td>
+
+        </tr> 
+
+    {% endfor %}
+    </table>
+
 {% endblock  %}
