--- a/DegustandoAndo/core/templates/core/base.html
+++ b/DegustandoAndo/core/templates/core/base.html
@@ -64,9 +64,10 @@
         </div>
         <!-- End: Header -->
       </div>
-
+      <div class="container">
       {%block contenido_central %}
       {% endblock %}
+      </div>
       <!-- Start: Footer -->
       <div class="container-fluid footer">
         <div class="row contact">
