--- a/DegustandoAndo/core/templates/core/eliminar_articulo.html
+++ b/DegustandoAndo/core/templates/core/eliminar_articulo.html
@@ -1,4 +1,4 @@
 {%extends 'core/base.html'%}
 {%block contenido_central%}
-ESTE ES EL HTML INDEX
+EL ARTICULO {{articulo_eliminado }} FUE ELIMINADO
 {% endblock  %}
