--- a/DegustandoAndo/core/templates/core/index.html
+++ b/DegustandoAndo/core/templates/core/index.html
@@ -1,4 +1,10 @@
 {%extends 'core/base.html'%}
 {%block contenido_central%}
-ESTE ES EL HTML INDEX
+<h3>Inicio</h3>
+{% if request.user.is_authenticated %}
+    <hr>
+    <h4>
+        {{ user.username | upper }}, bienvenido
+    </h4>
+{%endif%}
 {% endblock  %}
