--- a/DegustandoAndo/core/templates/core/index.html
+++ b/DegustandoAndo/core/templates/core/index.html
@@ -1,10 +1,28 @@
 {%extends 'core/base.html'%}
+
 {%block contenido_central%}
-<h3>Inicio</h3>
 {% if request.user.is_authenticated %}
-    <hr>
-    <h4>
-        {{ user.username | upper }}, bienvenido
-    </h4>
+    <div class='row'>
+        <div class="col-md-4">
+            <div class="card">
+                <img src={{ user.picture.url }} class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">{{ user.first_name| upper }}</h5>
+                  <small>{{user.location}} </small>
+                  <p class="card-text mt-3">{{user.bio}}</p>
+                  <a href={% url 'logout' %} class="btn btn-sm btn-success">Cerrar sesion</a>
+                </div>
+             </div>
+        </div>
+        <div class ="col-md-8">
+            <h4> Titulo que quiera </h4>
+            <p>{% lorem %}</p>
+        </div>
+</div>
+{%else %}
+    <h4> Titulo que quiera </h4>
+    <p>{% lorem %}</p>
+
 {%endif%}
+
 {% endblock  %}
