--- a/DegustandoAndo/core/templates/core/base.html
+++ b/DegustandoAndo/core/templates/core/base.html
@@ -20,6 +20,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
       <![endif]-->
+
     </head>
     <body id="page-top" data-spy="scroll" data-target=".side-menu">
       <nav class="side-menu">
@@ -63,34 +64,33 @@
         </ul>
       </nav>
       <div class="container-fluid">
-        <!-- Start: Header -->
-        <div class="row hero-header" id="home">
-          <div class="col-md-7">
-            <img src="{% static 'core/img/meetup-logo.png' %}" class="logo">
-            <h1>Attend the most awaited Conference of 2015</h1>
-            <h3>to start you up with your business!</h3>
-            <h4>20<sup>th</sup> to 22<sup>nd</sup>  October, 2015</h4>
-            <a href="#" class="btn btn-lg btn-red">Buy Tickets Now <span class="ti-arrow-right"></span></a>
+  <!-- Start: Header -->
+  <div class="row hero-header" id="home">
+    <div class="col-md-5">
+      <h1>Degustando ando </h1>
+      <h3>Comparti tu experiencia con comensales de todo el mundo</h3>
+      <a href= "{% url 'sobremi'%}"  class="btn btn-lg btn-red">Quienes somos? </a>
 
-          </div>
-          <div class="col-md-5 hidden-xs">
-            <img src="{% static 'core/img/rocket.png' %}" class="rocket animated bounce">
-          </div>
-        </div>
-        <!-- End: Header -->
-      </div>
-      <div class="container">
-      {%block contenido_central %}
-      {% endblock %}
+    </div>
+    <div class="col-md-5 hidden-xs">
+      <img src="{% static 'core/img/rocket.png' %}" class="">
+    </div>
+  </div>
+  <!-- End: Header -->
+<!-- End: Header -->
+  </div>
+  <div class="container">
+    {%block contenido_central %}
+    {% endblock %}
       </div>
       <!-- Start: Footer -->
       <div class="container-fluid footer">
         <div class="row contact">
           <div class="col-md-6 contact-form">
-            <h3 class="content-ct"><span class="ti-email"></span> Contact Form</h3>
+            <h3 class="content-ct"><span class="ti-email"></span> Formulario de contacto</h3>
             <form class="form-horizontal" data-toggle="validator" role="form">
               <div class="form-group">
-                <label for="name" class="col-sm-3 control-label">Name<sup>*</sup></label>
+                <label for="name" class="col-sm-3 control-label">nombre<sup>*</sup></label>
                 <div class="col-sm-9">
                   <input type="text" class="form-control" id="name" placeholder="John Doe" required>
                   <div class="help-block with-errors pull-right"></div>
@@ -106,7 +106,7 @@
                 </div>
               </div>
               <div class="form-group">
-                <label for="message" class="col-sm-3 control-label">Your Message<sup>*</sup></label>
+                <label for="message" class="col-sm-3 control-label">Dejanos tu consulta/comentario<sup>*</sup></label>
                 <div class="col-sm-9">
                   <textarea id="message" class="form-control" rows="3" required></textarea>
                   <div class="help-block with-errors pull-right"></div>
@@ -115,13 +115,13 @@
               </div>
               <div class="form-group">
                 <div class="col-sm-offset-3 col-sm-9">
-                  <button type="submit" id="submit" name="submit" class="btn btn-yellow pull-right">Send <span class="ti-arrow-right"></span></button>
+                  <button type="submit" id="submit" name="submit" class="btn btn-yellow pull-right">enviar <span class="ti-arrow-right"></span></button>
                 </div>
               </div>
             </form>
           </div>
           <div class="col-md-4 col-md-offset-1 content-ct">
-            <h3><span class="ti-twitter"></span> Twitter Feed</h3>
+            <h3><span class="ti-twitter"></span> perfil de Twitter</h3>
             <p>Lorem <a href="#">#Ipsum</a> is a dummy text used as a text filler in designs. This is just a dummy text. via <a href="#">@designerdada</a> </p>
             <hr>
             <p>Lorem Ipsum is a <a href="#">#dummy</a> text used as a text filler in designs. This is just a dummy text. via <a href="#">@designerdada</a> </p>
