--- a/DegustandoAndo/core/templates/core/mostrar_articulo.html
+++ b/DegustandoAndo/core/templates/core/mostrar_articulo.html
@@ -1,24 +1,22 @@
 {%extends 'core/base.html'%}
+{%load static%}
 {%block contenido_central%}
 
-<table>
-    <th> -id-</th>
-    <th> titulo- </th>
-    <th> subtitulo- </th>
-    <th> ubicacion- </th>
 
-    {% for articulo in articulos %}
-        <tr>
-            <td>  {{ articulo.id}} </td>
-            <td>  {{ articulo.titulo }} </td>
-            <td>  {{ articulo.subtitulo }} </td>
-            <td>  {{ articulo.ubicacion }} </td>
-            <td><a href = "{% url 'editar' articulo.id %}" > Editar</a></td>
-            <td><a href = "{% url 'eliminar' articulo.id %}" > Eliminar</a></td>
+<div class="card-group">
+{% for articulo in articulos %}
+    <div class="card-group">
+        <div class="card" style="width: 18rem;">
+        <img src= "{{articulo.imagen}}" width="60px" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">{{articulo.titulo}}</h5>
+            <p class="card-text">{{articulo.subtitulo}}, {{articulo.ubicacion}} </p>
+            <a href="{% url 'leermas' articulo.id %}">Leer más</a>
+            
+        </div>
+        </div>
+    </div>
+{% endfor %}
+</div>
 
-        </tr> 
-
-    {% endfor %}
-    </table>
-
-{% endblock  %}
+{% endblock contenido_central  %}
