--- a/DegustandoAndo/core/templates/core/index.html
+++ b/DegustandoAndo/core/templates/core/index.html
@@ -6,7 +6,7 @@
 {% if request.user.is_authenticated %}
     <hr>
     <h4>
-        {{ user.username | upper }}, bienvenido
+        bienvenido, {{ user.first_name | upper }} {{ user.last_name | upper }}. 
     </h4>
 {%endif%}
 {% endblock  %}
