--- a/DegustandoAndo/core/templates/core/base.html
+++ b/DegustandoAndo/core/templates/core/base.html
@@ -48,7 +48,7 @@
           </li>
           {% if request.user.is_authenticated %}
           <li>
-            <a href="{% url 'exit'%}"class="page-scroll">
+            <a href="{% url 'perfiles'%}"class="page-scroll">
               <span class="menu-title"> MI PERFIL</span>
               <span class="dot"></span>
             </a>
