--- a/DegustandoAndo/core/templates/core/leermas.html
+++ b/DegustandoAndo/core/templates/core/leermas.html
@@ -6,8 +6,8 @@
 <h1> {{ articulo.titulo}} </h1>
     <li>{{ articulo.cuerpo }}</li>
 
-    <a href="{% url 'eliminar' articulo.id %}">eliminar</a>
-    <a href="{% url 'editar' articulo.id %}">Leer más</a>
+    <td><a href = "{% url 'editar' articulo.id %}" > Editar</a></td>
+    <td><a href = "{% url 'eliminar' articulo.id %}" > Eliminar</a></td>
 
 
 {% endblock  %}
